compile it on Linux

--- a/deps/chakrashim/core/lib/Runtime/Debug/CMakeLists.txt
+++ b/deps/chakrashim/core/lib/Runtime/Debug/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library (Chakra.Runtime.Debug OBJECT
     RuntimeDebugPch.cpp
     SourceContextInfo.cpp
     TTActionEvents.cpp
+    TTAllocTracing.cpp
     TTEventLog.cpp
     TTEvents.cpp
     TTExecutionInfo.cpp
